tests/Fixtures/Torture/Bad/redeclare.g
// EXPECT G003
kernel { entry func Main() { let int s = 10; let String s = "hi"; } }
